HTMLのタイトルを変更する

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -6,6 +6,6 @@ html(lang="ja")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-mobile-web-app-status-bar-style", content="black-translucent")
-    title チャット
+    title LGTM画像管理
   body
     #app
